<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:background="@android:color/white" >

    <Button
        android:id="@+id/play_list_item_number_button"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_centerVertical="true"
        android:background="@null"
        android:textSize="@dimen/dimen_16"
        android:textColor="@color/normal_text_color"
        android:text="@string/number_1" />
    
    <TextView
        android:id="@+id/play_list_item_title_textview"
        style="@style/normal_text_style"
        android:layout_toRightOf="@+id/play_list_item_number_button"
        android:layout_marginLeft="8dp"
        android:text="@string/music_title" />
    
    <TextView
        android:id="@+id/play_list_item_artist_textview"
        style="@style/normal_text_style_gray_small"
        android:layout_below="@+id/play_list_item_title_textview"
        android:layout_alignLeft="@+id/play_list_item_title_textview"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/music_item_file"
        android:drawablePadding="5dp"
        android:text="@string/music_artist" />
    
    <TextView
        android:id="@+id/play_list_item_duration_textview"
        style="@style/normal_text_style_gray_small"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:text="@string/duration_text" />

</RelativeLayout>